# PdfDumper

./: .gitignore  CDumpApi.cpp  CDumpApi.h  CMakeLists.txt  CairoOutputDevNoText.h  ImageCroper.cpp  ImageDumper.cpp  ImageDumper.h  ObjectDumper.cpp  ObjectDumper.h  README.md  build.sh  main.cpp
python/: setup.py
python/poppler_atom/: __init__.py  pdf_parser.py
